sdk/bindings/csharp/NextTabletDriver.Sdk/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace NextTabletDriver.Sdk
{
    public static unsafe partial class NativeMethods
    {
        const string __DllName = "ntd_sdk";





        /// <summary>
        ///  Returns this build's FFI ABI version, so a host can detect a mismatch
        ///  against the header/bindings it was compiled with.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ntd_sdk_abi_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint ntd_sdk_abi_version();

        /// <summary>
        ///  Starts the embedded engine: becomes the HID owner if no other process
        ///  currently is one, otherwise starts in reader mode and mirrors the real
        ///  owner's state. Idempotent: calling this again while already initialised
        ///  is a no-op that returns [`NTD_OK`].
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ntd_init", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int ntd_init();

        /// <summary>
        ///  Stops the embedded engine and joins its background thread. Safe to call
        ///  even if [`ntd_init`] was never called, or was already shut down.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ntd_shutdown", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void ntd_shutdown();

        /// <summary>
        ///  Copies the current tablet + config snapshot into `*out_state`.
        ///
        ///  # Safety
        ///
        ///  `out_state` must be a non-null, valid, properly aligned pointer to a
        ///  writable `NtdState`, valid for the duration of this call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ntd_poll_state", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int ntd_poll_state(NtdState* out_state);

        /// <summary>
        ///  Sets the driver mode (`0` = absolute, `1` = relative). Writes directly if
        ///  this process is the current HID owner, otherwise forwards the change to
        ///  whichever process is.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ntd_set_mode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int ntd_set_mode(byte mode);

        /// <summary>
        ///  Sets the active mapping area (millimeters, clamped to the current
        ///  device's physical surface). Writes directly if this process is the
        ///  current HID owner, otherwise forwards the change to whichever process is.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ntd_set_active_area", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int ntd_set_active_area(float x, float y, float w, float h, float rotation);


    }

    /// <summary>
    ///  Live tablet + config snapshot returned by [`ntd_poll_state`].
    ///
    ///  Field-for-field mirror of [`next_tablet_driver::engine::interop::shm::SdkPublicState`].
    ///  The two layouts are asserted equal in size below, since both cross an
    ///  FFI/ABI boundary (this one to the host process, that one to other
    ///  processes).
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct NtdState
    {
        [MarshalAs(UnmanagedType.U1)] public bool is_connected;
        public byte status;
        public float u;
        public float v;
        public float screen_x;
        public float screen_y;
        public int pressure;
        public int tilt_x;
        public int tilt_y;
        public byte buttons;
        [MarshalAs(UnmanagedType.U1)] public bool is_down;
        [MarshalAs(UnmanagedType.U1)] public bool eraser;
        public fixed byte device_name[64];
        public uint device_name_len;
        public ushort vid;
        public ushort pid;
        public byte mode;
        public float active_area_x;
        public float active_area_y;
        public float active_area_w;
        public float active_area_h;
        public float active_area_rotation;
        public uint config_version;
    }



}
